Minor Updates to Risk Map Page (to prevent overflow)

--- a/FrontEnd/src/MainRiskMap/MainContent.module.css
+++ b/FrontEnd/src/MainRiskMap/MainContent.module.css
@@ -7,8 +7,6 @@
 
 .contentContainer {
   flex-direction: column;
-  width: 100%;
-  height: 100%;
   display: flex;
 }
 
@@ -32,12 +30,14 @@
 
 @media (width <= 991px) {
   .mainColumn {
-    width: calc(100% - 300px);
-    margin-left: 300px;
+    width: calc(100% - 350px);
+    margin-left: 350px;
   }
 
   .mainSection {
     margin-top: 30px;
+    width: calc(100% - 350px);
+    margin-left: 350px;
   }
   
   .subtitle {
