--- a/FrontEnd/src/MainRiskMap/MapSection.module.css
+++ b/FrontEnd/src/MainRiskMap/MapSection.module.css
@@ -1,17 +1,15 @@
 .mapContainer {
-  width: 100%;
   margin-top: 75px;
+  margin-bottom: 75px;
 }
 
 .mapFrame {
   background-color: #fff;
   border-radius: 35px;
-  width: 100%;
   overflow: hidden;
 }
 
 .mapImage {
   aspect-ratio: 2.05;
   object-fit: cover;
-  width: 100%;
 }
